<resources>
    <string name="app_name">AutomotiveAssistant</string>
    <string name="login">Login</string>
    <string name="enter_phone">Phone</string>
    <string name="Password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="business_login">Business Login</string>
    <string name="user_login">User login</string>
    <string name="userresister">User Resister</string>
    <string name="user_name"> User Name</string>
    <string name="email">E-mail</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="businessownerregister">Business Register</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="forgotpassworddetails">Provide your account\'s phone number for which you want to reset your password</string>
    <string name="makeSelection">Select an option to recieve an Otp</string>
    <string name="via_sms">Via-SMS:</string>
    <string name="via_mail">via-mail:</string>
    <string name="next">NEXT</string>
    <string name="your_password_has_been_updated">Your password has been updated</string>
    <string name="password_updated">Password updated</string>
    <string name="update_profile">Update Profile</string>
    <string name="resetPassword">Reset_Password</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_user_navigation">UserNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="geeksforgeeks">GeeksforGeeks</string>
    <string name="logout">logout</string>
    <string name="profile">Profile</string>
    <string name="the_assistant_you_need">The Assistant you need</string>
    <string name="automotive_assistant">Automotive Assistant</string>
    <string name="categories">Categories</string>
    <string name="mechanics">Mechanics</string>
    <string name="expand_all">Expand All</string>
    <string name="todo">TODO</string>
    <string name="gas_stations">Gas Stations</string>
    <string name="ev_charging_stations">EV Charging Stations</string>
    <string name="business_type">Business Type</string>
    <string name="garage">Garage</string>
    <string name="fuel_bunk">Fuel Bunk</string>
    <string name="mechanic_name">Mechanic Name</string>
    <string name="business_name">Business Name</string>
    <string name="services">Services (eg:- 2 wheeler, 4 wheeler)</string>
    <string name="availability">Availability</string>
    <string name="address">Address</string>
    <string name="create_business">create business</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="bunk_name">Bunk Name</string>
    <string name="pincode">Pincode</string>
    <string name="landmark">Landmark</string>

</resources>