<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/profile">

        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile"
                    android:title="@string/update_profile"
                    />

                <item
                    android:id="@+id/nav_password"
                    android:icon="@drawable/reset"
                    android:title="@string/resetPassword" />

                <item

                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout"
                    android:onClick="Logout"/>


            </group>
        </menu>
    </item>


</menu>